--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
+
     <title>React App</title>
   </head>
   <body>
